fix spinner z-index

--- a/src/app/pages/extra-components/spinner/spinner.component.scss
+++ b/src/app/pages/extra-components/spinner/spinner.component.scss
@@ -6,6 +6,6 @@
   }
 
   ::ng-deep nb-spinner {
-    z-index: 999;
+    z-index: 10;
   }
 }
